@@ -1,3 +1,5 @@
+* Make the IE `dom:loaded` event only use the doScroll() technique when using less than IE8. [jddalton]
+
 * Change argument order in dom traversal methods. [jddalton]
   New argument order for up/down/next/previous/first/last methods:
     (/* empty */)
